# frappe-app-dartwing

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  BUSINESS_LOGIC.md  CLAUDE.md  COMMIT_MESSAGE.txt  DEPENDENCIES.md  GITHUB_SETUP.md  MANIFEST.in  README.md  SETUP.md  STRUCTURE.md  pyproject.toml
.specify/memory/: constitution.backup  constitution.md
dartwing/: hooks.py  modules.txt  patches.txt
dartwing/api/: family.py  person.py  utils.py  v1.py
dartwing/config/: desktop.py  docs.py
dartwing/dartwing_company/: __init__.py  api.py  permissions.py  utils.py
dartwing/fixtures/: role.json  role_template.json
dartwing/integrations/: keycloak.py
dartwing/overrides/: sales_invoice_override.py
dartwing/permissions/: __init__.py  api.py  association.py  company.py  equipment.py  family.py  helpers.py  nonprofit.py  organization.py
dartwing/tests/: README.md  fixtures.py  test_family_permissions.py  test_organization_api.py  test_organization_hooks.py  test_permission_api.py  test_permission_helpers.py  test_permission_propagation.py  test_person_api.py
dartwing/utils/: __init__.py  doctype_utils.py  permission_logger.py  person_sync.py  person_utils.py
dartwing_frappe/: modules.txt
docs/: architecture_dartwing_fax.md  dartwingFaxPRD.txt  dartwing_modules.md
docs/dartwing_ams/: dartwing_ams.md  dartwing_ams_arch.md
docs/dartwing_company/: dartwing_company_arch.md  dartwing_company_prd.md  (+3 more)
fixtures/: role.json
locale/: en.csv  es.csv
openspec/: project.md
tests/: test_dartwing.py  test_family_api.py
www/: health.html  index.html
(+358 files in other folders)
